--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -14,6 +14,7 @@
 \usepackage{float}
 \usepackage{multicol}
 \usepackage{subcaption}
+\usepackage{fontawesome}
 
 % Layout
 \geometry{a4paper, margin=2.5cm}
@@ -22,7 +23,8 @@
 
 \title{Résolution de l'Équation de Poisson par Méthodes Hybrides : \\
 Réseaux Neuronaux Informés par la Physique et Apprentissage Supervisé}
-\author{Idriss MORTADI \\ \href{mailto:idriss.mortadi@student-cs.fr}{idriss.mortadi@student-cs.fr}}
+\author{Idriss MORTADI \\ \href{mailto:idriss.mortadi@student-cs.fr}{idriss.mortadi@student-cs.fr} \\ 
+\faGithub~\href{https://github.com/idrissmortadi/cs-hybrid-ai-tp}{Github Repository}}
 \date{Avril 2025}
 
 \begin{document}
